// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CitationCounts should not render View full statistics link on public pages for anonymous user 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <a
        aria-label="Full citation in Web of science will open in a new window"
        class="wosCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Web of science will open in a new window"
      >
        <span
          class="fez-icon wos large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Scopus will open in a new window"
        class="scopusCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D12345%26origin%3Dinward"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Scopus will open in a new window"
      >
        <span
          class="fez-icon scopus large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          0
        </span>
      </a>
      <a
        aria-label="Full citation in Altmetric will open in a new window"
        class="altmetricCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://queensland.altmetric.com/details/12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Altmetric will open in a new window"
      >
        <span
          class="fez-icon altmetric large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Google scholar will open in a new window"
        class="googleCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://scholar.google.com/scholar?q=intitle:This%20is%20test%20title"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Google scholar will open in a new window"
      >
        <span
          class="fez-icon google large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`CitationCounts should render component with a mock record metrics 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <a
        aria-label="Full citation in Scopus will open in a new window"
        class="scopusCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-85026774540%26origin%3Dinward"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Scopus will open in a new window"
      >
        <span
          class="fez-icon scopus large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          0
        </span>
      </a>
      <a
        aria-label="Full citation in Altmetric will open in a new window"
        class="altmetricCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://queensland.altmetric.com/details/23535331"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Altmetric will open in a new window"
      >
        <span
          class="fez-icon altmetric large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Google scholar will open in a new window"
        class="googleCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://scholar.google.com/scholar?q=intitle:ENA/VASP%20proteins%20regulate%20exocytosis%20by%20mediating%20myosin%20VI-dependent%20recruitment%20of%20secretory%20granules%20to%20the%20cortical%20actin%20network"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Google scholar will open in a new window"
      >
        <span
          class="fez-icon google large"
        />
      </a>
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    >
      <a
        class="css-qsfl36"
        data-analyticsid="full-statistics-link"
        data-testid="full-statistics-link"
        href="https://app.library.uq.edu.au/#/authors/view/UQ:678728"
        id="full-statistics-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="ENA/VASP proteins regulate exocytosis by mediating myosin VI-dependent recruitment of secretory granules to the cortical actin network"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="full-statistics-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
          />
        </svg>
        View full statistics
      </a>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`CitationCounts should render component with all metrics 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <a
        aria-label="Full citation in Web of science will open in a new window"
        class="wosCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://www.webofknowledge.com/?auth=ShibbolethIdPForm&entityID=https://idp.uq.edu.au/entity&ShibFederation=OpenAthensFederation&DestApp=WOS&target=https%253A%252F%252Fwww.webofscience.com%252Fapi%252Fgateway%253FGWVersion%253D2%2526SrcAuth%253Duqueensland%2526SrcApp%253Dresolve1%2526DestLinkType%253DFullRecord%2526DestApp%253DWOS_CPL%2526KeyUT%253D12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Web of science will open in a new window"
      >
        <span
          class="fez-icon wos large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          0
        </span>
      </a>
      <a
        aria-label="Full citation in Scopus will open in a new window"
        class="scopusCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D12345%26origin%3Dinward"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Scopus will open in a new window"
      >
        <span
          class="fez-icon scopus large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Altmetric will open in a new window"
        class="altmetricCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://queensland.altmetric.com/details/12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Altmetric will open in a new window"
      >
        <span
          class="fez-icon altmetric large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Dimensions will open in a new window"
        class="dimensionsCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fapp.dimensions.ai%2Fdetails%2Fpublication%2F12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Dimensions will open in a new window"
      >
        <span
          class="fez-icon dimensions large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          33
        </span>
      </a>
      <a
        aria-label="Full citation in Google scholar will open in a new window"
        class="googleCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://scholar.google.com/scholar?q=intitle:This%20is%20test%20title"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Google scholar will open in a new window"
      >
        <span
          class="fez-icon google large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    >
      <a
        class="css-qsfl36"
        data-analyticsid="full-statistics-link"
        data-testid="full-statistics-link"
        href="https://app.library.uq.edu.au/#/authors/view/pid:111"
        id="full-statistics-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="This is test title"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="full-statistics-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
          />
        </svg>
        View full statistics
      </a>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`CitationCounts should render component with no metrics 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`CitationCounts should render null as 0 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <a
        aria-label="Full citation in Dimensions will open in a new window"
        class="dimensionsCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fapp.dimensions.ai%2Fdetails%2Fpublication%2F12345"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Dimensions will open in a new window"
      >
        <span
          class="fez-icon dimensions large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          0
        </span>
      </a>
      <a
        aria-label="Full citation in Google scholar will open in a new window"
        class="googleCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://scholar.google.com/scholar?q=intitle:This%20is%20test%20title"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Google scholar will open in a new window"
      >
        <span
          class="fez-icon google large"
        />
      </a>
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    />
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;

exports[`CitationCounts should render open access icon when required 1`] = `
<div>
  <div
    class="MuiGridLegacy-root MuiGridLegacy-container css-164hai-MuiGridLegacy-root"
  >
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-12 MuiGridLegacy-grid-sm-auto css-e9j1q9-MuiGridLegacy-root"
    >
      <a
        aria-label="Full citation in Scopus will open in a new window"
        class="scopusCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://resolver.library.uq.edu.au/openathens/redir?qurl=https%3A%2F%2Fwww.scopus.com%2Frecord%2Fdisplay.uri%3Feid%3D2-s2.0-85026774540%26origin%3Dinward"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Scopus will open in a new window"
      >
        <span
          class="fez-icon scopus large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          0
        </span>
      </a>
      <a
        aria-label="Full citation in Altmetric will open in a new window"
        class="altmetricCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://queensland.altmetric.com/details/23535331"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Altmetric will open in a new window"
      >
        <span
          class="fez-icon altmetric large"
        />
        <span
          class="MuiBox-root css-19k1sqg"
        >
          1
        </span>
      </a>
      <a
        aria-label="Full citation in Google scholar will open in a new window"
        class="googleCitationCount css-pi8u"
        data-analyticsid="citation-count-link"
        data-testid="citation-count-link"
        href="https://scholar.google.com/scholar?q=intitle:ENA/VASP%20proteins%20regulate%20exocytosis%20by%20mediating%20myosin%20VI-dependent%20recruitment%20of%20secretory%20granules%20to%20the%20cortical%20actin%20network"
        id="citation-count-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="Full citation in Google scholar will open in a new window"
      >
        <span
          class="fez-icon google large"
        />
      </a>
      <span
        class="noOaIcon"
        data-testid="oa-n/a-icon"
      />
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item css-11uceyq-MuiGridLegacy-root"
    >
      <a
        class="css-qsfl36"
        data-analyticsid="full-statistics-link"
        data-testid="full-statistics-link"
        href="https://app.library.uq.edu.au/#/authors/view/UQ:678728"
        id="full-statistics-link"
        rel="noopener noreferrer"
        tabindex="0"
        target="_blank"
        title="ENA/VASP proteins regulate exocytosis by mediating myosin VI-dependent recruitment of secretory granules to the cortical actin network"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1rso8a2-MuiSvgIcon-root"
          data-testid="OpenInNewIcon"
          focusable="false"
          id="full-statistics-link-new-window-icon"
          viewBox="0 0 24 24"
        >
          <path
            d="M19 19H5V5h7V3H5c-1.11 0-2 .9-2 2v14c0 1.1.89 2 2 2h14c1.1 0 2-.9 2-2v-7h-2zM14 3v2h3.59l-9.83 9.83 1.41 1.41L19 6.41V10h2V3z"
          />
        </svg>
        View full statistics
      </a>
    </div>
    <div
      class="MuiGridLegacy-root MuiGridLegacy-item MuiGridLegacy-grid-xs-true css-1n3v6zn-MuiGridLegacy-root"
    />
  </div>
</div>
`;
